--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .vscode
 __pycache__
 site.min
-data.pkl
-dump.py
 content.sql
 init.sh
-static/**
-app/static/**
+app/static/img/
+static/assets
+node_modules
