--- a/app/static/js/package.json
+++ b/app/static/js/package.json
@@ -2,7 +2,6 @@
   "name": "pipol",
   "version": "1.0.0",
   "description": "algo se me ocurrira",
-  "main": "story.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +17,11 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "react-insta-stories": "^2.0.2"
+    "react": "^16.13.0",
+    "react-autosuggest": "^9.4.3",
+    "react-dom": "^16.13.0",
+    "react-insta-stories": "^2.0.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   }
 }
